// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Contact renders correctly with a single link 1`] = `
.c0 {
  margin-top: 3rem;
  margin-bottom: 3rem;
}

.c1 {
  display: grid;
  position: relative;
  min-height: auto;
  width: 100%;
  grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
  column-gap: calc(24px);
}

.c1 >* {
  grid-column: 2/auto;
}

.c7 {
  display: flex;
  gap: 1.5rem;
  flex-wrap: wrap;
}

.c8 {
  color: #3b82f6;
  text-decoration: none;
  line-height: 1;
  transition: color 0.2s ease-in-out;
}

.c8:hover {
  color: #3b82f6;
}

.c8:focus-visible {
  outline: 2px solid #3b82f6;
  outline-offset: 2px;
}

.c2 {
  color: #a0a0b0;
  font-size: 1rem;
  line-height: 1.5;
  margin: 0;
  padding: 0;
}

.c5 {
  color: #a0a0b0;
  font-size: 1.25rem;
  line-height: 1.5;
  margin: 0;
  padding: 0;
}

.c3 {
  font-size: 0.75rem;
  letter-spacing: 0.2em;
  text-transform: uppercase;
  color: #3b82f6;
  margin: 0 0 1.25rem;
}

.c4 {
  font-family: var(--font-space-grotesk),sans-serif;
  font-size: 2.5rem;
  font-weight: 700;
  color: #ffffff;
  line-height: 1.1;
  margin: 0 0 2rem;
  max-width: 600px;
}

.c9 {
  font-size: 1.125rem;
  font-weight: 700;
}

.c6 {
  max-width: 600px;
  line-height: 1.7;
  margin-bottom: 2.5rem;
}

@media (min-width: 600px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
    column-gap: calc(24px);
  }
}

@media (min-width: 900px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 72px) 1fr;
    column-gap: calc(36px);
  }
}

@media (min-width: 1200px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 162px) 1fr;
    column-gap: calc(81px);
  }
}

@media (min-width: 1536px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 243px) 1fr;
    column-gap: calc(121.5px);
  }
}

@media (min-width: 600px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1200px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1536px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1200px) {
  .c4 {
    font-size: 3.5rem;
  }
}

<div>
  <section
    class="c0"
    id="contact"
  >
    <section
      class="c1"
    >
      <p
        class="c2 c3"
        variant="regular"
      >
        Contact
      </p>
      <h2
        class="c4"
      >
        Get in touch
      </h2>
      <p
        class="c5 c6"
        variant="large"
      >
        Let's talk.
      </p>
      <div
        class="c7"
      >
        <a
          aria-label="Email me"
          class="c8 c9"
          href="mailto:test@test.com"
          rel="noopener noreferrer"
          target="_blank"
        >
          Email me
        </a>
      </div>
    </section>
  </section>
</div>
`;

exports[`Contact renders correctly with all links 1`] = `
.c0 {
  margin-top: 3rem;
  margin-bottom: 3rem;
}

.c1 {
  display: grid;
  position: relative;
  min-height: auto;
  width: 100%;
  grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
  column-gap: calc(24px);
}

.c1 >* {
  grid-column: 2/auto;
}

.c7 {
  display: flex;
  gap: 1.5rem;
  flex-wrap: wrap;
}

.c8 {
  color: #3b82f6;
  text-decoration: none;
  line-height: 1;
  transition: color 0.2s ease-in-out;
}

.c8:hover {
  color: #3b82f6;
}

.c8:focus-visible {
  outline: 2px solid #3b82f6;
  outline-offset: 2px;
}

.c2 {
  color: #a0a0b0;
  font-size: 1rem;
  line-height: 1.5;
  margin: 0;
  padding: 0;
}

.c5 {
  color: #a0a0b0;
  font-size: 1.25rem;
  line-height: 1.5;
  margin: 0;
  padding: 0;
}

.c3 {
  font-size: 0.75rem;
  letter-spacing: 0.2em;
  text-transform: uppercase;
  color: #3b82f6;
  margin: 0 0 1.25rem;
}

.c4 {
  font-family: var(--font-space-grotesk),sans-serif;
  font-size: 2.5rem;
  font-weight: 700;
  color: #ffffff;
  line-height: 1.1;
  margin: 0 0 2rem;
  max-width: 600px;
}

.c9 {
  font-size: 1.125rem;
  font-weight: 700;
}

.c6 {
  max-width: 600px;
  line-height: 1.7;
  margin-bottom: 2.5rem;
}

@media (min-width: 600px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
    column-gap: calc(24px);
  }
}

@media (min-width: 900px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 72px) 1fr;
    column-gap: calc(36px);
  }
}

@media (min-width: 1200px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 162px) 1fr;
    column-gap: calc(81px);
  }
}

@media (min-width: 1536px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 243px) 1fr;
    column-gap: calc(121.5px);
  }
}

@media (min-width: 600px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1200px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1536px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1200px) {
  .c4 {
    font-size: 3.5rem;
  }
}

<div>
  <section
    class="c0"
    id="contact"
  >
    <section
      class="c1"
    >
      <p
        class="c2 c3"
        variant="regular"
      >
        Contact
      </p>
      <h2
        class="c4"
      >
        Let's work together
      </h2>
      <p
        class="c5 c6"
        variant="large"
      >
        I'm available for remote frontend and tech lead roles, freelance projects, and consulting. If you're building something with React, Next.js, or Shopify — let's talk.
      </p>
      <div
        class="c7"
      >
        <a
          aria-label="Email me"
          class="c8 c9"
          href="mailto:test@test.com"
          rel="noopener noreferrer"
          target="_blank"
        >
          Email me
        </a>
        <a
          aria-label="LinkedIn"
          class="c8 c9"
          href="https://linkedin.com/in/agostiniandrea"
          rel="noopener noreferrer"
          target="_blank"
        >
          LinkedIn
        </a>
        <a
          aria-label="GitHub"
          class="c8 c9"
          href="https://github.com/agostiniandrea"
          rel="noopener noreferrer"
          target="_blank"
        >
          GitHub
        </a>
      </div>
    </section>
  </section>
</div>
`;
